--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
+        "shetabit/visitor": "^4.3",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
