--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^4.6",
         "shetabit/visitor": "^4.3",
         "socialiteproviders/microsoft": "^4.6",
+        "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-permission": "^6.10",
         "stevebauman/location": "^7.4"
     },
